--- a/projects/RSVP.html
+++ b/projects/RSVP.html
@@ -50,11 +50,19 @@ The cityscapes dataset for semantic urban scene understanding. CVPR (2016).
 		<li>[2] Philipp Fischer, Alexey Dosovitskiy, Eddy Ilg, Philip Häusser, Caner Hazirbas,
 Vladimir Golkov, Patrick van der Smagt, Daniel Cremers, and Thomas Brox. 2015.
 FlowNet: Learning Optical Flow with Convolutional Networks. CoRR (2015).</li>
-<li>[3] A. Bearman, O. Russakovsky, V. Ferrari, and L. Fei-Fei.
-What’s the point: Semantic segmentation</li>
 		<li>[3] Xiaodan Liang, Chunyan Xu, Xiaohui Shen, Jianchao Yang, Si Liu, Jinhui Tang,
 Liang Lin, and Shuicheng Yan. 2015. Human Parsing With Contextualized Con-
 volutional Neural Network. ICCV (2015).</li>
+		<li>[4] Si Liu, Changhu Wang, Ruihe Qian, Han Yu, Renda Bao, and Yao Sun. 2017.
+Surveillance Video Parsing with Single Frame Supervision. CVPR (2017).</li>
+		<li>[5] Jérôme Revaud, Philippe Weinzaepfel, Zaïd Harchaoui, and Cordelia Schmid.
+2015. EpicFlow: Edge-preserving interpolation of correspondences for optical
+flow. CVPR (2015).</li>
+		<li>[6] HW Zhang, Z-J Zha, Y Yang, SC Yan, Y Gao, and T-S Chua. 2013. Attribute-
+augmented semantic hierarchy: towards bridging semantic gap and intention
+gap in image retrieval. In ACM MM.</li>
+		<li>[7] Rui Zhao, Wanli Ouyang, and Xiaogang Wang. 2014. Learning mid-level filters
+for person re-identification. In CVPR.</li>
 	</ul>
 
 </section>
