--- a/index-1.html
+++ b/index-1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>30174 template preview</title>
+<title>S-Lab</title>
 <meta charset="utf-8">
 <link href="css/reset.css" rel="stylesheet" type="text/css" />
 <link href="css/layout.css" rel="stylesheet" type="text/css" />
