fix some errors

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ var _hmt = _hmt || [];
                                         </div>
                                       </div>
                                     </li>
-                                    <li> <a class="thumb" name="leaf" href="images/pub-big-5.jpg" title="Title #0"> <img alt="" src="images/pub-5.jpg"  width="227" height="147"/> </a>
+                                    <li> <a class="thumb" name="leaf" href="images/pub-big-5.png" title="Title #0"> <img alt="" src="images/pub-5.png"  width="227" height="147"/> </a>
                                       <div class="caption">
                                         <h3> &bull; The automatic makeup paper is selected as the best paper runner up of the State Key Lab of Information Security 2016.</h3>
                                         <h3> &bull; S-Lab自动上妆工作获得信息安全国家重点实验室2016年度最佳论文二等奖</h3><div class="image-desc">
