fix some errors

--- a/index-2-2.html
+++ b/index-2-2.html
@@ -59,13 +59,14 @@ var _hmt = _hmt || [];
                 <article id="column-left">
                   <nav>
                     <ul>
-                      <li><a href="index.html">home</a></li>
-                      <li><a href="index-1.html">about</a></li>
-                      <li  class="act"><a href="index-2.html">people</a></li>
-                      <li><a href="index-3.html">publication</a></li>
-                      <li><a href="index-5.html">group seminar</a></li>
+                      <li><a href="index.html">Home</a></li>
+                      <li><a href="index-1.html">About</a></li>
+                      <li  class="act"><a href="index-2.html">People</a></li>
+                      <li><a href="index-3.html">Publication</a></li>
+                      <li><a href="index-5.html">Group seminar</a></li>
                       <li><a href="index-4.html">Recruitment</a></li>
-                      <li><a href="index-6.html">contacts</a></li>
+                      <li><a href="life.html">Life</a></li>
+                      <li><a href="index-6.html">Contacts</a></li>
                     </ul>
                   </nav>
                  
@@ -79,15 +80,15 @@ var _hmt = _hmt || [];
                             <div class="wrapper">
                              <div class="carousel-box">
                                 <div class="inner">
-                             <div class="wrapper">
-                               <h4> &bull; <a href="index-2.html"> Head &nbsp; </a> &nbsp;  &bull; <a href="index-2-1.html"> Visitors &nbsp; </a> &nbsp; &bull; <a href="index-2-2.html"> Research Student</a></h4>
+                              <div class="wrapper">
+                              <h4> &bull; <a href="index-2.html"> Head &nbsp; </a> &nbsp;  &bull; <a href="index-2-2.html"> Research Student &nbsp; </a> &nbsp; &bull; <a href="index-2-1.html"> Visitors</a></h4>
                               <div class="clear"></div>
                               <div class="wrapper">
                                   <h4 class="extra"> Research Student </h4>
                                    <table width="240"  height="205" border="2" class="table-img" >
   <tbody>
     <tr>
-      <td>  <img src="images/yuhan.jpg" alt="" width="227" height="190"/></td>
+      <td>  <img src="images/yuhan.jpg" alt="" width="227" height="230"/></td>
     </tr>
   </tbody>
 </table>
@@ -114,7 +115,7 @@ var _hmt = _hmt || [];
  <table width="240"  height="205" border="2" class="table-img" >
   <tbody>
     <tr>
-      <td>  <img src="images/jiajun.jpg" alt="" width="227" height="190"/></td>
+      <td>  <img src="images/jiajun.jpg" alt="" width="227" height="230"/></td>
     </tr>
   </tbody>
 </table>                           
@@ -141,7 +142,7 @@ var _hmt = _hmt || [];
  <table width="240"  height="205" border="2" class="table-img" >
   <tbody>
     <tr>
-      <td>  <img src="images/weizhen.jpg" alt="" width="227" height="190"/></td>
+      <td>  <img src="images/weizhen.jpg" alt="" width="227" height="230"/></td>
     </tr>
   </tbody>
 </table> 
@@ -168,7 +169,7 @@ var _hmt = _hmt || [];
  <table width="240"  height="205" border="2" class="table-img" >
   <tbody>
     <tr>
-      <td>  <img src="images/qianruihe.png" alt="" width="227" height="190"/></td>
+      <td>  <img src="images/qianruihe.png" alt="" width="227" height="230"/></td>
     </tr>
   </tbody>
 </table> 
@@ -194,7 +195,7 @@ var _hmt = _hmt || [];
  <table width="240"  height="205" border="2" class="table-img" >
   <tbody>
     <tr>
-      <td>  <img src="images/liaoyue.jpg" alt="" width="227" height="190"/></td>
+      <td>  <img src="images/liaoyue.jpg" alt="" width="227" height="230"/></td>
     </tr>
   </tbody>
 </table> 
@@ -220,7 +221,7 @@ var _hmt = _hmt || [];
  <table width="240"  height="205" border="2" class="table-img" >
   <tbody>
     <tr>
-      <td>  <img src="images/renlejian.jpg" alt="" width="227" height="190"/></td>
+      <td>  <img src="images/renlejian.jpg" alt="" width="227" height="230"/></td>
     </tr>
   </tbody>
 </table> 
@@ -246,7 +247,7 @@ var _hmt = _hmt || [];
  <table width="240"  height="205" border="2" class="table-img" >
   <tbody>
     <tr>
-      <td>  <img src="images/baorenda.jpg" alt="" width="227" height="190"/></td>
+      <td>  <img src="images/baorenda.jpg" alt="" width="227" height="230"/></td>
     </tr>
   </tbody>
 </table> 
@@ -272,7 +273,7 @@ var _hmt = _hmt || [];
  <table width="240"  height="205" border="2" class="table-img" >
   <tbody>
     <tr>
-      <td>  <img src="images/renguanghui.jpg" alt="" width="227" height="190"/></td>
+      <td>  <img src="images/renguanghui.jpg" alt="" width="227" height="230"/></td>
     </tr>
   </tbody>
 </table> 
@@ -298,7 +299,7 @@ var _hmt = _hmt || [];
  <table width="240"  height="205" border="2" class="table-img" >
   <tbody>
     <tr>
-      <td>  <img src="images/zhudefa.jpg" alt="" width="227" height="190"/></td>
+      <td>  <img src="images/zhudefa.jpg" alt="" width="227" height="230"/></td>
     </tr>
   </tbody>
 </table> 
@@ -324,7 +325,7 @@ var _hmt = _hmt || [];
  <table width="240"  height="205" border="2" class="table-img" >
   <tbody>
     <tr>
-      <td>  <img src="images/kefei.jpg" alt="" width="227" height="190"/></td>
+      <td>  <img src="images/kefei.jpg" alt="" width="227" height="230"/></td>
     </tr>
   </tbody>
 </table> 
