--- a/index.html
+++ b/index.html
@@ -107,13 +107,14 @@ var _hmt = _hmt || [];
                 <article id="column-left">
                   <nav>
                     <ul>
-                      <li class="act"><a href="index.html">home</a></li>
-                      <li><a href="index-1.html">about</a></li>
-                      <li><a href="index-2.html">people</a></li>
-                      <li ><a href="index-3.html">publication</a></li>
-                      <li><a href="index-5.html">group seminar</a></li>
+                      <li class="act"><a href="index.html">Home</a></li>
+                      <li><a href="index-1.html">About</a></li>
+                      <li><a href="index-2.html">People</a></li>
+                      <li ><a href="index-3.html">Publication</a></li>
+                      <li><a href="index-5.html">Group seminar</a></li>
                       <li><a href="index-4.html">Recruitment</a></li>
-                      <li><a href="index-6.html">contacts</a></li>
+                      <li><a href="life.html">Life</a></li>
+                      <li><a href="index-6.html">Contacts</a></li>
                     </ul>
                   </nav>
                 </article>
