--- a/index-2.html
+++ b/index-2.html
@@ -59,13 +59,14 @@ var _hmt = _hmt || [];
                 <article id="column-left">
                   <nav>
                     <ul>
-                      <li><a href="index.html">home</a></li>
-                      <li><a href="index-1.html">about</a></li>
-                      <li  class="act"><a href="index-2.html">people</a></li>
-                      <li><a href="index-3.html">publication</a></li>
-                      <li><a href="index-5.html">group seminar</a></li>
+                      <li><a href="index.html">Home</a></li>
+                      <li><a href="index-1.html">About</a></li>
+                      <li  class="act"><a href="index-2.html">People</a></li>
+                      <li><a href="index-3.html">Publication</as></li>
+                      <li><a href="index-5.html">Group seminar</a></li>
                       <li><a href="index-4.html">Recruitment</a></li>
-                      <li><a href="index-6.html">contacts</a></li>
+                      <li><a href="life.html">Life</a></li>
+                      <li><a href="index-6.html">Contacts</a></li>
                     </ul>
                   </nav>
                  
@@ -77,7 +78,7 @@ var _hmt = _hmt || [];
                         <div class="bot">
                           <div class="inner">
                              <div class="wrapper">
-                              <h4> &bull; <a href="index-2.html"> Head &nbsp; </a> &nbsp;  &bull; <a href="index-2-1.html"> Visitors &nbsp; </a> &nbsp; &bull; <a href="index-2-2.html"> Research Student</a></h4>
+                              <h4 > &bull; <a href="index-2.html"> Head &nbsp; </a> &nbsp;  &bull; <a href="index-2-2.html"> Research Student &nbsp; </a> &nbsp; &bull; <a href="index-2-1.html"> Visitors</a></h4>
                               <div class="clear"></div>
                               <div class="wrapper">
                                   <h4 class="extra"> Head</h4>
