--- a/life.html
+++ b/life.html
@@ -84,6 +84,9 @@ var _hmt = _hmt || [];
    
   <table border="2" class="table-img" >
   <tbody>
+      <tr>
+      <td> <img width="740" height="400" src="images/life/2016tianjin.jpg"/> </td>
+    </tr>
     <tr>
       <td> <img width="740" height="500" src="images/life/2016chunjie.jpg"/> </td>
     </tr>
@@ -95,9 +98,6 @@ var _hmt = _hmt || [];
     </tr>
     <tr>
       <td> <p></p></td>
-    </tr>
-    <tr>
-      <td> <img width="740" height="600" src="images/life/xiamen.jpg"/> </td>
     </tr>
   </tbody>
 
