add some pics to life

--- a/life.html
+++ b/life.html
@@ -88,16 +88,19 @@ var _hmt = _hmt || [];
       <td> <img width="740" height="400" src="images/life/2016tianjin.jpg"/> </td>
     </tr>
     <tr>
+      <td> <p>2017年2月，歌神欧老师在天津用歌声征服全场</p></td>
+    </tr>
+    <tr>
       <td> <img width="740" height="500" src="images/life/2016chunjie.jpg"/> </td>
     </tr>
     <tr>
-      <td> <p></p></td>
+      <td> <p>2017年春节表彰大会后，大家开心地在一起合影</p></td>
     </tr>
     <tr>
       <td> <img width="740" height="360" src="images/life/bdci-qingdao.jpg"/> </td>
     </tr>
     <tr>
-      <td> <p></p></td>
+      <td> <p>2016年CCF比赛获奖，大家受邀在摄影棚拍宣传video</p></td>
     </tr>
   </tbody>
 
