--- a/index-6.html
+++ b/index-6.html
@@ -54,6 +54,7 @@ var _hmt = _hmt || [];
                       <li><a href="index-1.html">About</a></li>
                       <li><a href="index-2.html">People</a></li>
                       <li ><a href="index-3.html">Publication</a></li>
+                      <li ><a href="projects.html">Projects</a></li>
                      <li ><a href="index-5.html">Group seminar</a></li>
                       <li><a href="index-4.html">Recruitment</a></li>
                       <li><a href="life.html">Life</a></li>
