fix some errors

--- a/projects.html
+++ b/projects.html
@@ -54,7 +54,7 @@ var _hmt = _hmt || [];
                       <li><a href="index-1.html">About</a></li>
                       <li><a href="index-2.html">People</a></li>
                       <li ><a href="index-3.html">Publication</a></li>
-                      <li  class="act"><a href="projects/SVP">Projects</a></li>
+                      <li  class="act"><a href="projects.html">Projects</a></li>
                      <li ><a href="index-5.html">Group seminar</a></li>
                       <li><a href="index-4.html">Recruitment</a></li>
                       <li><a href="life.html">Life</a></li>
@@ -75,14 +75,14 @@ var _hmt = _hmt || [];
   <tbody>
     <tr>
       <td> 
-<a href="projects/SVP">Surveillance Video Parsing with Single Frame Supervision </a></td>
+<a href="projects/SVP">SVP: Surveillance Video Parsing with Single Frame Supervision </a></td>
     </tr>
     <tr>
       <td> <p></p></td>
     </tr>
     <tr>
       <td> 
-<a href="projects/RSVP">A Real-Time Surveillance Video Parsing with Single Frame Supervision</a></td>
+<a href="projects/RSVP">RSVP: A Real-Time Surveillance Video Parsing with Single Frame Supervision</a></td>
     </tr>
 
   </tbody>
@@ -112,7 +112,7 @@ var _hmt = _hmt || [];
                   
                   </dl>
                   <p>
-                    <!-- {%FOOTER_LINK} -->
+                    <!-- FOOTER_LINK -->
                   </p>
                 </div>
                 <div class="block-2">
