--- a/projects/SVP.html
+++ b/projects/SVP.html
@@ -1,3 +1,7 @@
+---
+permalink: projects/SVP
+---
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -172,7 +176,7 @@ What’s the point: Semantic segmentation</li>
                   
                   </dl>
                   <p>
-                    <!-- {%FOOTER_LINK} -->
+                    <!-- FOOTER_LINK -->
                   </p>
                 </div>
                 <div class="block-2">
