--- a/projects/RSVP.html
+++ b/projects/RSVP.html
@@ -1,3 +1,7 @@
+---
+permalink: projects/RSVP
+---
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -159,7 +163,7 @@ for person re-identification. In CVPR.</li>
                   
                   </dl>
                   <p>
-                    <!-- {%FOOTER_LINK} -->
+                    <!-- FOOTER_LINK -->
                   </p>
                 </div>
                 <div class="block-2">
