--- a/index-1.html
+++ b/index-1.html
@@ -69,14 +69,14 @@ var _hmt = _hmt || [];
                         <div class="bot">
                           <div class="inner">
                             <div class="wrapper">
-                             <center>
-                              <img src="images/about.jpg"   width="667" height="197"/> </center>
-                              <p>&nbsp; </p>
+                          
                            <p> &nbsp;&nbsp;&nbsp;&nbsp;S-lab (semantic Segmentation Laboratory) is founded on June 12th 2016. We focus on the semantic segmentation, including human parsing, face parsing, scene parsing and video parsing. S-lab also works on object detection, human pose estimation, attribute prediction and remote sensing image processing. S-lab is interested in applying the CV techniques to real applications, such as intelligent makeup system  and surveillance video analysis.  The lab currently has about 10 members. 
 </p>  
 <p >&nbsp;&nbsp;&nbsp;&nbsp;S-lab (语义分割实验室) 成立于2016年6月12日。实验室专注于语义分割方面的研究，包含人像解析、人脸解析、场景解析以及视频解析。我们同时也研究目标检测、人体姿态估计、属性预测以及遥感图像处理。我们致力于把所研发的技术应用于实际生活中，代表性的工作如智能上妆系统以及视频监控系统。目前S-lab 有10名左右成员。</p>
 <p >&nbsp;&nbsp;&nbsp;&nbsp; Prof. Liu Si, who is the leader of the lab, is an associate professor in Institute of Information Engineering, Chinese Academy of Sciences . She was a visiting professor in Microsoft Research Asia. She used to work with Prof. Shuicheng Yan in National University of Singapore. She obtained Ph.D. degree from Institute of Automation, Chinese Academy of Sciences (CASIA), under the supervision of Prof. Hanqing Lu. She obtained Bachelor degree from Advanced Class of Beijing Institute of Technology (BIT) .
-</p>
+</p>   <center>
+                              <img src="images/about.jpg"   width="667" height="400"/> </center>
+                              <p>&nbsp; </p>
                               <div class="clear"></div>
                               <div class="wrapper">
                                 <article class="col-1">
