--- a/projects.html
+++ b/projects.html
@@ -75,14 +75,16 @@ var _hmt = _hmt || [];
   <tbody>
     <tr>
       <td> 
-<a href="projects/SVP">SVP: Surveillance Video Parsing with Single Frame Supervision </a></td>
+        <a href="projects/RSVP">RSVP: A Real-Time Surveillance Video Parsing with Single Frame Supervision</a>
+      </td>
     </tr>
     <tr>
-      <td> <p></p></td>
+      <td><p></p></td>
     </tr>
     <tr>
       <td> 
-<a href="projects/RSVP">RSVP: A Real-Time Surveillance Video Parsing with Single Frame Supervision</a></td>
+        <a href="http://www.spretarget.com">Semantic Preserving Retargeting</a>
+      </td>
     </tr>
 
   </tbody>
