--- a/index-3.html
+++ b/index-3.html
@@ -82,7 +82,7 @@ var _hmt = _hmt || [];
  <p>------------------------ Conference Papers ------------------------</p>
 
 <p>1. Zhen Wei, Yao Sun, Jinqiao Wang, Hanjiang Lai, Si Liu, Learning Adaptive Receptive Fields for Deep Image Parsing Network, CVPR 2017. </p>
-<p> 2.	Si Liu, Changhu Wang, Ruihe Qian, Han Yu, Renda Bao, Yao Sun, Surveillance Video Parsing with Single Frame Supervision, CVPR 2017 [demo].[Paper]</p>
+<p> 2.	Si Liu, Changhu Wang, Ruihe Qian, Han Yu, Renda Bao, Yao Sun, Surveillance Video Parsing with Single Frame Supervision, CVPR 2017 [<a href="http://liusi-group.com/projects/SVP">Details</a>].[<a href="https://arxiv.org/abs/1611.09587">Paper</a>]</p>
                              </div>
                               <div class="clear"></div>
                             </div>
