--- a/projects/SVP.html
+++ b/projects/SVP.html
@@ -78,7 +78,7 @@ var _hmt = _hmt || [];
   </h2> 
   <h3>Paper</h3>
   <ol>
-    <li><strong><u>Si Liu</u></strong>, Changhu Wang, Ruihe Qian, Han Yu, Renda Bao, Surveillance Video Parsing with Single Frame Supervision, arxiv preprint[<a href="https://pan.baidu.com/s/1hrAPH1U">demo</a>].[<a href="https://arxiv.org/pdf/1611.09587v1.pdf">Paper</a>]</li>
+    <li><strong><u>Si Liu</u></strong>, Changhu Wang, Ruihe Qian, Han Yu, Renda Bao, Surveillance Video Parsing with Single Frame Supervision, arxiv preprint[<a href="https://pan.baidu.com/s/1hrAPH1U">Demo</a>].[<a href="https://arxiv.org/pdf/1611.09587v1.pdf">Paper</a>]</li>
   </ol>
                            
 
