--- a/index-5.html
+++ b/index-5.html
@@ -79,7 +79,11 @@ var _hmt = _hmt || [];
                                   <td><strong>Speakers</strong></td>
                                   <td><strong>Topic & Slides</strong></td>
                                 </tr>
-                                
+                                <tr>
+                                  <td><p> Tuesday, 6 July 2017, 20:00</p></td>
+                                  <td><small>Ren Guanghui(任广辉)</small></td>
+                                  <td><i><a href="https://pan.baidu.com/s/1qYwifMW"> HyperNet</a> and <a href="https://pan.baidu.com/s/1eRAzv38"> RON </a></i></td>
+                                </tr>
                                 <tr>
                                   <td><p> Saturday, 14 January 2017, 14:00</p></td>
                                   <td><small>Zhu Defa(朱德发)</small></td>
