--- a/index-3.html
+++ b/index-3.html
@@ -78,11 +78,19 @@ var _hmt = _hmt || [];
 <p>2.	Xinyu Ou, Ping Li, Hefei Ling, Si Liu, Tianjiang Wang, Dan Li. Objectness Region Enhancement Networks for Scene Parsing. Journal of Computer Science and Technology (JCST)  2017</p>
 <p>3.	Yao Sun, Lejian Ren, Zhen Wei, Bin Liu, Yanlong Zhai, Si Liu, A weakly supervised method for makeup-invariant face verification. Pattern Recognition 2017
 </p>
-<p>4.	Zhiyong Chen, Wei Zhang, Bin Hu, Xiaochun Can, Si Liu, Dan Meng, Retrieving Objects by Partitioning. IEEE Trans. Big Data 2017</p> 
+<p>4.	Zhiyong Chen, Wei Zhang, Bin Hu, Xiaochun Cao, Si Liu, Dan Meng, Retrieving Objects by Partitioning. IEEE Trans. Big Data 2017</p> 
  <p>------------------------ Conference Papers ------------------------</p>
 
-<p>1. Zhen Wei, Yao Sun, Jinqiao Wang, Hanjiang Lai, Si Liu, Learning Adaptive Receptive Fields for Deep Image Parsing Network, CVPR 2017. </p>
-<p> 2.	Si Liu, Changhu Wang, Ruihe Qian, Han Yu, Renda Bao, Yao Sun, Surveillance Video Parsing with Single Frame Supervision, CVPR 2017 [<a href="http://liusi-group.com/projects/SVP">Details</a>].[<a href="https://arxiv.org/abs/1611.09587">Paper</a>]</p>
+<p> 1. Si Liu, Yao Sun, Wei Wang, Renda Bao, Defa Zhu, Xiangbo Zhu, and Shuicheng Yan， Face Aging with Contextural Generative Adversarial Nets， ACM MM 2017</p>
+<p> 2. Bingke Zhu, Yingying Chen, Si Liu, Bo Zhang, Jinqiao Wang and Ming Tang， Fast Deep Matting for Portrait Animation on Mobile Phone， ACM MM 2017</p>
+<p> 3. Ting Liu, Yunchao Wei, Yao Zhao, Si Liu and Shikui Wei，Magic-wall: Visualizing Room Decoration， ACM MM 2017</p>
+<p> 4. Han Yu, Guanghui Ren, Ruihe Qian, Yao Sun,  Changhu Wang, Hanqing Lu  and Si Liu,  RSVP: A Real-Time Surveillance Video Parsing System with Single Frame Supervision， ACM MM 2017(Demo paper)[<a href="http://liusi-group.com/projects/RSVP">Details</a>]
+ </p>
+ <p> 5. Lejian Ren and Si Liu， Time Traveler: a real-time face aging system， ACM MM 2017(Demo paper)
+ </p>
+<p> 6. Zhen Wei, Yao Sun, Jinqiao Wang, Hanjiang Lai, Si Liu, Learning Adaptive Receptive Fields for Deep Image Parsing Network, CVPR 2017. </p>
+<p> 7.	Si Liu, Changhu Wang, Ruihe Qian, Han Yu, Renda Bao, Yao Sun, Surveillance Video Parsing with Single Frame Supervision, CVPR 2017 [<a href="http://liusi-group.com/projects/SVP">Details</a>].[<a href="https://arxiv.org/abs/1611.09587">Paper</a>]</p>
+
                              </div>
                               <div class="clear"></div>
                             </div>
