--- a/projects/RSVP.html
+++ b/projects/RSVP.html
@@ -78,7 +78,7 @@ var _hmt = _hmt || [];
   </h2> 
   <h3>Authors</h3>
   <ol>
-    <li>Han Yu, Guanghui Ren, Ruihe Qian, Yao Sun, Si Liu</li>
+    <li>Han Yu, Guanghui Ren, Ruihe Qian, Yao Sun, Changhu Wang, Si Liu</li>
   </ol>
   <h3>Introduction </h3>
   <p>
