--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@ var _hmt = _hmt || [];
                                   
                                    <li> <a class="thumb" name="leaf" href="images/pub-big-7.jpg" title="Title #0" width="464" height="367"> <img alt="" src="images/pub-7.png" width="227" height="147"/> </a>
                                       <div class="caption">
-                                        <h3> &bull; Five papers are accepted by ACM MM 2017</h3>
-                                        <h3> &bull; 5篇论文被ACM MM 2017 接收</h3>
+                                        <h3> &bull; Three papers and two demo paper are accepted by ACM MM 2017</h3>
+                                        <h3> &bull; 3篇长文和2篇demo论文被ACM MM 2017 接收</h3>
                                         <p>[2017-07-09]</p>
                                         <div class="image-desc">
                                           <p>1. Si Liu, Yao Sun, Wei Wang, Renda Bao, Defa Zhu, Xiangbo Zhu, and Shuicheng Yan， Face Aging with Contextural Generative Adversarial Nets， ACM MM 2017</p>
@@ -153,7 +153,7 @@ var _hmt = _hmt || [];
  </p>
  <p> 4. Han Yu, Guanghui Ren, Ruihe Qian, Yao Sun,  Changhu Wang, Hanqing Lu  and Si Liu,  RSVP: A Real-Time Surveillance Video Parsing System with Single Frame Supervision， ACM MM 2017(Demo paper)[<a href="http://liusi-group.com/projects/RSVP">Details</a>]
  </p>
- <p> 5. Lejian Ren and Si Liu， Time Traveler: a real-time face aging system， ACM MM 2017(Demo paper)
+ <p> 5. Lejian Ren, Si Liu, Yao Sun, JianDong,  Luoqi Liu and Shuicheng Yan, Time Traveler: a real-time face aging system， ACM MM 2017(Demo paper)
  </p>
                                           </div>
                                       </div>
