--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ var _hmt = _hmt || [];
                                   
                                    <li> <a class="thumb" name="leaf" href="images/pub-big-7.jpg" title="Title #0" width="464" height="367"> <img alt="" src="images/pub-7.png" width="227" height="147"/> </a>
                                       <div class="caption">
-                                        <h3> &bull; Three papers and two demo paper are accepted by ACM MM 2017</h3>
+                                        <h3> &bull; Three papers and two demo papers are accepted by ACM MM 2017</h3>
                                         <h3> &bull; 3篇长文和2篇demo论文被ACM MM 2017 接收</h3>
                                         <p>[2017-07-09]</p>
                                         <div class="image-desc">
