--- a/projects.html
+++ b/projects.html
@@ -75,7 +75,7 @@ var _hmt = _hmt || [];
   <tbody>
     <tr>
       <td> 
-        <a href="projects/RSVP">RSVP: A Real-Time Surveillance Video Parsing with Single Frame Supervision</a>
+        <a href="projects/RSVP">&bull; RSVP: A Real-Time Surveillance Video Parsing with Single Frame Supervision</a>
       </td>
     </tr>
     <tr>
@@ -83,7 +83,7 @@ var _hmt = _hmt || [];
     </tr>
     <tr>
       <td> 
-        <a href="http://www.spretarget.com">Semantic Preserving Retargeting</a>
+        <a href="http://www.spretarget.com">&bull; Deep Semantic Image Retargeting</a>
       </td>
     </tr>
 
