--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ var _hmt = _hmt || [];
                                   
                                    <li> <a class="thumb" name="leaf" href="images/pub-big-7.jpg" title="Title #0" width="464" height="367"> <img alt="" src="images/pub-7.png" width="227" height="147"/> </a>
                                       <div class="caption">
-                                        <h3> &bull; Three papers and two demo papers are accepted by ACM MM 2017</h3>
+                                        <h3> &bull; Three full papers and two demo papers are accepted by ACM MM 2017</h3>
                                         <h3> &bull; 3篇长文和2篇demo论文被ACM MM 2017 接收</h3>
                                         <p>[2017-07-09]</p>
                                         <div class="image-desc">
@@ -151,9 +151,9 @@ var _hmt = _hmt || [];
 <p> 2. Bingke Zhu, Yingying Chen, Si Liu, Bo Zhang, Jinqiao Wang and Ming Tang， Fast Deep Matting for Portrait Animation on Mobile Phone， ACM MM 2017</p>
 <p> 3. Ting Liu, Yunchao Wei, Yao Zhao, Si Liu and Shikui Wei，Magic-wall: Visualizing Room Decoration， ACM MM 2017
  </p>
- <p> 4. Han Yu, Guanghui Ren, Ruihe Qian, Yao Sun,  Changhu Wang, Hanqing Lu  and Si Liu,  RSVP: A Real-Time Surveillance Video Parsing System with Single Frame Supervision， ACM MM 2017(Demo paper)[<a href="http://liusi-group.com/projects/RSVP">Details</a>]
+ <p> 4. Han Yu, Guanghui Ren, Ruihe Qian, Yao Sun,  Changhu Wang, Hanqing Lu  and Si Liu,  RSVP: A Real-Time Surveillance Video Parsing System with Single Frame Supervision， ACM MM 2017[Demo paper].[<a href="http://liusi-group.com/projects/RSVP">Details</a>]
  </p>
- <p> 5. Lejian Ren, Si Liu, Yao Sun, JianDong,  Luoqi Liu and Shuicheng Yan, Time Traveler: a real-time face aging system， ACM MM 2017(Demo paper)
+ <p> 5. Lejian Ren, Si Liu, Yao Sun, JianDong,  Luoqi Liu and Shuicheng Yan, Time Traveler: a real-time face aging system， ACM MM 2017[Demo paper]
  </p>
                                           </div>
                                       </div>
