--- a/index.html
+++ b/index.html
@@ -175,9 +175,10 @@ var _hmt = _hmt || [];
                                         <h3>&bull;2篇语义分割论文被CVPR 2017 接收 </h3>
                                         <div class="image-desc">
                                           <p>[2017-06-26]</p>
-                                          <p>  &nbsp; &nbsp; &nbsp; &nbsp; Si Liu, Changhu Wang, Ruihe Qian, Han Yu, Renda Bao, Yao Sun, Surveillance Video Parsing with Single Frame Supervision, CVPR 2017 [demo].[Paper]
-  Zhen Wei, Yao Sun, Jinqiao Wang, Hanjiang Lai, Si Liu, Learning Adaptive Receptive Fields for Deep Image Parsing Network, CVPR 2017.
-</p>
+                                          
+<p> 1. Si Liu, Changhu Wang, Ruihe Qian, Han Yu, Renda Bao, Yao Sun, Surveillance Video Parsing with Single Frame Supervision, CVPR 2017 [<a href="http://liusi-group.com/projects/SVP">Details</a>].[<a href="https://arxiv.org/abs/1611.09587">Paper</a>]</p>
+<p> 2. Zhen Wei, Yao Sun, Jinqiao Wang, Hanjiang Lai, Si Liu, Learning Adaptive Receptive Fields for Deep Image Parsing Network, CVPR 2017.
+ </p>
                                         </div>
                                       </div>
                                     </li>
