--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ var _hmt = _hmt || [];
                                         <div class="image-desc">
                                           <p>[2017-06-26]</p>
                                           
-<p> 1. Si Liu, Changhu Wang, Ruihe Qian, Han Yu, Renda Bao, Yao Sun, Surveillance Video Parsing with Single Frame Supervision, CVPR 2017 [<a href="http://liusi-group.com/projects/SVP">Details</a>].[<a href="https://arxiv.org/abs/1611.09587">Paper</a>]</p>
+<p> 1. Si Liu, Changhu Wang, Ruihe Qian, Han Yu, Renda Bao, Yao Sun, Surveillance Video Parsing with Single Frame Supervision, CVPR 2017 [<a href="http://liusi-group.com/projects/SVP">Details</a>].[<a href="pdf/Surveillance Video Parsing with Single Frame Supervision(final version).pdf">Paper</a>]</p>
 <p> 2. Zhen Wei, Yao Sun, Jinqiao Wang, Hanjiang Lai, Si Liu, Learning Adaptive Receptive Fields for Deep Image Parsing Network, CVPR 2017.
  </p>
                                         </div>
