--- a/index-3.html
+++ b/index-3.html
@@ -89,7 +89,7 @@ var _hmt = _hmt || [];
  <p> 5. Lejian Ren, Si Liu, Yao Sun, JianDong,  Luoqi Liu and Shuicheng Yan， Time Traveler: a real-time face aging system， ACM MM 2017[Demo paper]
  </p>
 <p> 6. Zhen Wei, Yao Sun, Jinqiao Wang, Hanjiang Lai, Si Liu, Learning Adaptive Receptive Fields for Deep Image Parsing Network, CVPR 2017. </p>
-<p> 7.	Si Liu, Changhu Wang, Ruihe Qian, Han Yu, Renda Bao, Yao Sun, Surveillance Video Parsing with Single Frame Supervision, CVPR 2017 [<a href="http://liusi-group.com/projects/SVP">Details</a>].[<a href="https://arxiv.org/abs/1611.09587">Paper</a>]</p>
+<p> 7.	Si Liu, Changhu Wang, Ruihe Qian, Han Yu, Renda Bao, Yao Sun, Surveillance Video Parsing with Single Frame Supervision, CVPR 2017 [<a href="http://liusi-group.com/projects/SVP">Details</a>].[<a href="pdf/Surveillance Video Parsing with Single Frame Supervision(final version).pdf">Paper</a>]</p>
 
                              </div>
                               <div class="clear"></div>
