--- a/index-5.html
+++ b/index-5.html
@@ -79,6 +79,17 @@ var _hmt = _hmt || [];
                                   <td><strong>Speakers</strong></td>
                                   <td><strong>Topic & Slides</strong></td>
                                 </tr>
+                                
+                                <tr>
+                                  <td><p> Tuesday, 29 July 2017, 14:00</p></td>
+                                  <td><small>Yue Liao(廖越)</small></td>
+                                  <td><i>and <a href="https://pan.baidu.com/s/1jHFcntk"> Adversarial PoseNet</a></i></td>
+                                </tr>
+                                <tr>
+                                  <td><p> Tuesday, 24 July 2017, 14:00</p></td>
+                                  <td><small>Yue Liao(廖越)</small></td>
+                                  <td><i><a href="https://pan.baidu.com/s/1qXPFt9q"> Stacked hourglass</a></i></td>
+                                </tr>
                                 <tr>
                                   <td><p> Tuesday, 6 July 2017, 20:00</p></td>
                                   <td><small>Ren Guanghui(任广辉)</small></td>
