--- a/index-5.html
+++ b/index-5.html
@@ -83,7 +83,7 @@ var _hmt = _hmt || [];
                                 <tr>
                                   <td><p> Tuesday, 29 July 2017, 14:00</p></td>
                                   <td><small>Yue Liao(廖越)</small></td>
-                                  <td><i>and <a href="https://pan.baidu.com/s/1jHFcntk"> Adversarial PoseNet</a></i></td>
+                                  <td><i><a href="https://pan.baidu.com/s/1jHFcntk"> Adversarial PoseNet</a></i></td>
                                 </tr>
                                 <tr>
                                   <td><p> Tuesday, 24 July 2017, 14:00</p></td>
