--- a/index-5.html
+++ b/index-5.html
@@ -91,6 +91,11 @@ var _hmt = _hmt || [];
                                   <td><i><a href="https://pan.baidu.com/s/1qXPFt9q"> Stacked hourglass</a></i></td>
                                 </tr>
                                 <tr>
+                                  <td><p> Tuesday, 15 July 2017, 14:00</p></td>
+                                  <td><small>Renda Bao(包仁达)</small></td>
+                                  <td><i><a href="https://pan.baidu.com/s/1c1Z7phY"> Deeplab v3</a></i></td>
+                                </tr>
+                                <tr>
                                   <td><p> Tuesday, 6 July 2017, 20:00</p></td>
                                   <td><small>Ren Guanghui(任广辉)</small></td>
                                   <td><i><a href="https://pan.baidu.com/s/1qYwifMW"> HyperNet</a> and <a href="https://pan.baidu.com/s/1eRAzv38"> RON </a></i></td>
