--- a/index-5.html
+++ b/index-5.html
@@ -93,7 +93,8 @@ var _hmt = _hmt || [];
                                 <tr>
                                   <td><p> Tuesday, 15 July 2017, 14:00</p></td>
                                   <td><small>Renda Bao(包仁达)</small></td>
-                                  <td><i><a href="https://pan.baidu.com/s/1c1Z7phY"> Deeplab v3</a></i></td>
+                                  <td><i><a href="https://pan.baidu.com/s/1c1Z7phY"> Deeplab v3 and ICNet for Real-Time Semantic Segmentation on High-Resolution Images</a></i></td>
+
                                 </tr>
                                 <tr>
                                   <td><p> Tuesday, 6 July 2017, 20:00</p></td>
