fix error and add paper

--- a/index-3.html
+++ b/index-3.html
@@ -78,10 +78,13 @@ var _hmt = _hmt || [];
 <p>2.	Xinyu Ou, Ping Li, Hefei Ling, Si Liu, Tianjiang Wang, Dan Li. Objectness Region Enhancement Networks for Scene Parsing. Journal of Computer Science and Technology (JCST)  2017</p>
 <p>3.	Yao Sun, Lejian Ren, Zhen Wei, Bin Liu, Yanlong Zhai, Si Liu, A weakly supervised method for makeup-invariant face verification. Pattern Recognition 2017
 </p>
-<p>4.	Zhiyong Chen, Wei Zhang, Bin Hu, Xiaochun Cao, Si Liu, Dan Meng, Retrieving Objects by Partitioning. IEEE Trans. Big Data 2017</p> 
+<p>4. Zhiyong Chen, Si Liu, Yanlong Zhai, Jia Lin, Xiaochun Cao, Liang Yang. Human Parsing by Weak Structural Label. Multimedia Tools and Applications 2017
+</p> 
+
+
  <p>------------------------ Conference Papers ------------------------</p>
 
-<p> 1. Si Liu, Yao Sun, Wei Wang, Renda Bao, Defa Zhu, Xiangbo Zhu, and Shuicheng Yan， Face Aging with Contextural Generative Adversarial Nets， ACM MM 2017</p>
+<p> 1. Si Liu, Yao Sun, Wei Wang, Renda Bao, Defa Zhu, Xiangbo Zhu, and Shuicheng Yan, Face Aging with Contextual Generative Adversarial Nets, ACM MM 2017</p>
 <p> 2. Bingke Zhu, Yingying Chen, Si Liu, Bo Zhang, Jinqiao Wang and Ming Tang， Fast Deep Matting for Portrait Animation on Mobile Phone， ACM MM 2017</p>
 <p> 3. Ting Liu, Yunchao Wei, Yao Zhao, Si Liu and Shikui Wei，Magic-wall: Visualizing Room Decoration， ACM MM 2017</p>
 <p> 4. Han Yu, Guanghui Ren, Ruihe Qian, Yao Sun,  Changhu Wang, Hanqing Lu  and Si Liu,  RSVP: A Real-Time Surveillance Video Parsing System with Single Frame Supervision， ACM MM 2017[Demo paper][<a href="http://liusi-group.com/projects/RSVP">Details</a>]
