--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ var _hmt = _hmt || [];
                                         <h3> &bull; 3篇长文和2篇demo论文被ACM MM 2017 接收</h3>
                                         <p>[2017-07-09]</p>
                                         <div class="image-desc">
-                                          <p>1. Si Liu, Yao Sun, Wei Wang, Renda Bao, Defa Zhu, Xiangbo Zhu, and Shuicheng Yan， Face Aging with Contextural Generative Adversarial Nets， ACM MM 2017</p>
+                                          <p>1. Si Liu, Yao Sun, Wei Wang, Renda Bao, Defa Zhu, Xiangbo Zhu, and Shuicheng Yan, Face Aging with Contextual Generative Adversarial Nets, ACM MM 2017</p>
 <p> 2. Bingke Zhu, Yingying Chen, Si Liu, Bo Zhang, Jinqiao Wang and Ming Tang， Fast Deep Matting for Portrait Animation on Mobile Phone， ACM MM 2017</p>
 <p> 3. Ting Liu, Yunchao Wei, Yao Zhao, Si Liu and Shikui Wei，Magic-wall: Visualizing Room Decoration， ACM MM 2017
  </p>
