--- a/life.html
+++ b/life.html
@@ -83,9 +83,21 @@ var _hmt = _hmt || [];
                               <div class="clear"></div>
                               <div class="wrapper">
    
-  <table border="2" class="table-img" >
+  <table border="2" class="table-img" > 
   <tbody>
-      <tr>
+    <tr>
+      <td> <img width="740" src="images/life/201708huangshan2.png"/> </td>
+    </tr>
+    <tr>
+      <td> <p>2017年8月，S-Lab去安徽黄山团建(部分人员下山后合影)</p></td>
+    </tr>
+    <tr>
+      <td> <img width="740" src="images/life/201708huangshan1.png"/> </td>
+    </tr>
+    <tr>
+      <td> <p>2017年8月，S-Lab去安徽黄山团建(图为索道上俯拍黄山)</p></td>
+    </tr>
+    <tr>
       <td> <img width="740" height="400" src="images/life/2016tianjin.jpg"/> </td>
     </tr>
     <tr>
