add life(201708 huangshan)

--- a/life.html
+++ b/life.html
@@ -98,6 +98,12 @@ var _hmt = _hmt || [];
       <td> <p>2017年8月，S-Lab去安徽黄山团建(图为索道上俯拍黄山)</p></td>
     </tr>
     <tr>
+      <td> <img width="740" src="images/life/201708huangshan3.jpg"/> </td>
+    </tr>
+    <tr>
+      <td> <p>2017年8月，S-Lab去安徽黄山团建(聚餐)</p></td>
+    </tr>
+    <tr>
       <td> <img width="740" height="400" src="images/life/2016tianjin.jpg"/> </td>
     </tr>
     <tr>
