--- a/index.html
+++ b/index.html
@@ -147,13 +147,13 @@ var _hmt = _hmt || [];
                                         <h3> &bull; 3篇长文和2篇demo论文被ACM MM 2017 接收</h3>
                                         <p>[2017-07-09]</p>
                                         <div class="image-desc">
-                                          <p>1. Si Liu, Yao Sun, Wei Wang, Renda Bao, Defa Zhu, Xiangbo Zhu, and Shuicheng Yan, Face Aging with Contextual Generative Adversarial Nets, ACM MM 2017</p>
+                                          <p>1. Si Liu, Yao Sun, Wei Wang, Renda Bao, Defa Zhu, Xiangbo Zhu, and Shuicheng Yan, Face Aging with Contextual Generative Adversarial Nets, ACM MM 2017[<a href="pdf/faceaging-acmmm2017.pdf">Full paper</a>]</p>
 <p> 2. Bingke Zhu, Yingying Chen, Si Liu, Bo Zhang, Jinqiao Wang and Ming Tang， Fast Deep Matting for Portrait Animation on Mobile Phone， ACM MM 2017</p>
 <p> 3. Ting Liu, Yunchao Wei, Yao Zhao, Si Liu and Shikui Wei，Magic-wall: Visualizing Room Decoration， ACM MM 2017
  </p>
- <p> 4. Han Yu, Guanghui Ren, Ruihe Qian, Yao Sun,  Changhu Wang, Hanqing Lu  and Si Liu,  RSVP: A Real-Time Surveillance Video Parsing System with Single Frame Supervision， ACM MM 2017[Demo paper].[<a href="http://liusi-group.com/projects/RSVP">Details</a>]
+ <p> 4. Han Yu, Guanghui Ren, Ruihe Qian, Yao Sun,  Changhu Wang, Hanqing Lu  and Si Liu,  RSVP: A Real-Time Surveillance Video Parsing System with Single Frame Supervision， ACM MM 2017[<a href="pdf/rsvp-acmmm2017.pdf">Demo paper</a>].[<a href="http://liusi-group.com/projects/RSVP">Details</a>]
  </p>
- <p> 5. Lejian Ren, Si Liu, Yao Sun, JianDong,  Luoqi Liu and Shuicheng Yan, Time Traveler: a real-time face aging system， ACM MM 2017[Demo paper]
+ <p> 5. Lejian Ren, Si Liu, Yao Sun, JianDong,  Luoqi Liu and Shuicheng Yan, Time Traveler: a real-time face aging system， ACM MM 2017[<a href="pdf/faceaging-demo-acmmm2017.pdf">Demo paper</a>]
  </p>
                                           </div>
                                       </div>
