--- a/index-5.html
+++ b/index-5.html
@@ -80,6 +80,21 @@ var _hmt = _hmt || [];
                                   <td><strong>Topic & Slides</strong></td>
                                 </tr>
                                 <tr>
+                                  <td><p> Friday, 22 September 2017, 19:00</p></td>
+                                  <td><small>Ruihe Qian(钱瑞和)</small></td>
+                                  <td><i><a href="http://pan.baidu.com/s/1cm6cZc"> The Basics of Video Object Segmentation</a></i></td>
+                                </tr>
+                                <tr>
+                                  <td><p> Friday, 22 September 2017, 19:00</p></td>
+                                  <td><small>Defa Zhu(朱德发)</small></td>
+                                  <td><i><a href="http://pan.baidu.com/s/1qYODm7y"> Mask-RCNN</a></i></td>
+                                </tr>
+                                <tr>
+                                  <td><p> Friday, 22 September 2017, 19:00</p></td>
+                                  <td><small>Lejian Ren(任乐健)</small></td>
+                                  <td><i><a href="http://pan.baidu.com/s/1bCEkbk"> ENet: A Deep Neural Network Architecture forReal-Time Semantic Segmentation</a></i></td>
+                                </tr>
+                                <tr>
                                   <td><p> Saturday, 16 September 2017, 14:00</p></td>
                                   <td><small>Kefei Lian(连克非)</small></td>
                                   <td><i><a href="http://pan.baidu.com/s/1i5uyNn3"> Deeply-Learned Part-Aligned Representations for Person Re-Identification</a></i></td>
